crates/main/amethystate/tests/snapshots/prefix_overlap__overlap_key_against_prefix.snap
---
source: crates/main/amethystate/tests/prefix_overlap.rs
expression: "contested(\"overlap_key_prefix\", |s| Outer::new_with(s).map(|_| ()), |s|\nPanels::new_with(s).map(|_| ()),)"
---
two schemas claim the same stored path
├╴prefix_overlap::Outer claims coll.panels.left.visible
╰╴prefix_overlap::Panels claims coll.panels.left.visible
