crates/main/amethystate/tests/snapshots/prefix_overlap__overlap_prefix_against_deep_prefix.snap
---
source: crates/main/amethystate/tests/prefix_overlap.rs
expression: "contested(\"overlap_prefix_deep\", |s| Panels::new_with(s).map(|_| ()), |s|\nLeft::new_with(s).map(|_| ()),)"
---
two schemas claim the same stored path
├╴prefix_overlap::Panels claims coll.panels.left.visible
╰╴prefix_overlap::Left claims coll.panels.left.visible
